@@ -137,6 +137,7 @@ func NewBuoyRouter(env *models.Env) *mux.Router {
 	r.Handle("/buoys/api/commands", defaultChain.Then(AppHandler{env, BuoyCommandsIndex})).Methods("GET", "OPTIONS")
 	r.Handle("/buoys/api/commands/ack", defaultChain.Then(AppHandler{env, BuoyCommandsAcknowledge})).Methods("POST", "OPTIONS")
 	r.Handle("/buoys/api/readings", defaultChain.Then(AppHandler{env, ReadingsCreate})).Methods("POST", "OPTIONS")
+	r.Handle("/buoys/api/readings/test", defaultChain.Then(AppHandler{env, ReadingsTest})).Methods("POST", "OPTIONS")
 
 	return r
 }
