@@ -24,6 +24,9 @@ type Reading struct {
 	Id             int64            `db:"reading_id"`
 	Latitude       float64          `json:"lat" db:"latitude"`
 	Longitude      float64          `json:"lng" db:"longitude"`
+	Altitude       float32          `json:"al" db:"altitude"`
+	SpeedOG        float32          `json:"sp" db:"speed_og"`
+	Course         float32          `json:"co" db:"course"`
 	Timestamp      time.Time        `db:"timestamp"`
 	Date           string           `json:"d"`
 	Time           string           `json:"t"`
@@ -57,12 +60,18 @@ type ReadingRepository interface {
 
 // Insert a new Reading into the database. Returns the id of the new Reading.
 func (db *DB) CreateReading(reading *Reading) (int64, error) {
-	stmt, err := db.Preparex(`INSERT INTO reading (buoy_instance_id, latitude, longitude, timestamp) VALUES(?, ?, ?, ?);`)
+	stmt, err := db.Preparex(`INSERT INTO reading (
+									buoy_instance_id, latitude, longitude, 
+									altitude, speed_og, course, timestamp
+								) 
+								VALUES 
+									(?, ?, ?, ?, ?, ?, ?);`)
 	if err != nil {
 		return -1, err
 	}
 
-	result, err := stmt.Exec(reading.BuoyInstanceId, reading.Latitude, reading.Longitude, reading.Timestamp)
+	result, err := stmt.Exec(reading.BuoyInstanceId, reading.Latitude, reading.Longitude,
+		reading.Altitude, reading.SpeedOG, reading.Course, reading.Timestamp)
 	if err != nil {
 		return -1, err
 	}
@@ -102,6 +111,9 @@ type DbMapReading struct {
 	Value            float64   `db:"value"`
 	Latitude         float64   `db:"latitude"`
 	Longitude        float64   `db:"longitude"`
+	Altitude         float32   `db:"altitude"`
+	SpeedOG          float32   `db:"speed_og"`
+	Course           float32   `db:"course"`
 	Timestamp        time.Time `db:"timestamp"`
 	SensorTypeId     int       `db:"sensor_type_id"`
 	BuoyGroupId      int       `db:"buoy_group_id"`
@@ -132,6 +144,9 @@ type MapReading struct {
 	Id             int                `json:"id"`
 	Latitude       float64            `json:"latitude"`
 	Longitude      float64            `json:"longitude"`
+	Altitude       float32            `json:"altitude"`
+	SpeedOG        float32            `json:"speedOG"`
+	Course         float32            `json:"course"`
 	Timestamp      int64              `json:"timestamp"`
 	SensorReadings []MapSensorReading `json:"sensorReadings"`
 }
@@ -153,6 +168,9 @@ func (db *DB) GetAllReadings(startTime time.Time, endTime time.Time) (*MapReadin
 		reading.latitude AS latitude, 
 		reading.longitude AS longitude, 
 		reading.timestamp AS timestamp, 
+		reading.altitude AS altitude,
+		reading.speed_og AS speed_og,
+		reading.course AS course,
 		buoy_instance.buoy_id AS buoy_id, 
 		buoy_instance.name AS buoy_instance_name,
 		buoy_group.id AS buoy_group_id, 
@@ -236,6 +254,9 @@ func buildReadingsIndexData(mapReadings []DbMapReading) (*MapReadingBuoyGroupsWr
 				Id:        reading.ReadingId,
 				Latitude:  reading.Latitude,
 				Longitude: reading.Longitude,
+				Altitude:  reading.Altitude,
+				SpeedOG:   reading.SpeedOG,
+				Course:    reading.Course,
 				Timestamp: reading.Timestamp.Unix(),
 			}
 			// Store the reading in the map
@@ -281,9 +302,19 @@ func (readings byTimestamp) Less(i, j int) bool {
 // Returns a 2D string array which can be passed to the CSV WriteAll
 // function.
 func (db *DB) GetReadingsIn(readingsIds []int) ([][]string, error) {
-	query, args, err := sqlx.In(`SELECT value, latitude, longitude, timestamp FROM sensor_reading 
-								 INNER JOIN reading ON sensor_reading.reading_id = reading.id 
-								 WHERE reading.id IN (?)`, readingsIds)
+	query, args, err := sqlx.In(`SELECT 
+									value, 
+									latitude, 
+									longitude, 
+									altitude,
+									speed_og,
+									course,
+									timestamp 
+								FROM 
+									sensor_reading 
+									INNER JOIN reading ON sensor_reading.reading_id = reading.id 
+								WHERE 
+									reading.id IN (?)`, readingsIds)
 	if err != nil {
 		return nil, err
 	}
